--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>AIRvi</title>
+		<title>Blaiva</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="airvi.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
