--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Blaiva</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="airvi.png">
+		<link rel="icon" href="Blaiva.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" 	href="assets/css/main.css" />
 	</head>
@@ -13,7 +13,7 @@
 			<header id="header" class="alt">
 				<div class="logo row">
 					<a href="index.html">AI Vision Robot <span>by Rwanda Robotics Team</span></a>
-					<!-- <img style="width: 200px; height: 0px" src="airvi.png" class="img-responsive"> -->
+					<!-- <img style="width: 200px; height: 0px" src="Blaiva.png" class="img-responsive"> -->
 				</div>
 				<a href="#menu">Menu</a>
 			</header>
@@ -35,9 +35,9 @@
 				<div class="inner">
 					<header>
 						<h1>AI Vision for the blind</h1>
-						<p>AIrvi gives a gift of sight to the blind through Artificial intelligence powered device.</p>
+						<p>Blaiva gives a gift of sight to the blind through Artificial intelligence powered device.</p>
 
-						<p>It's whole new world to see with AIrvi</p>
+						<p>It's whole new world to see with Blaiva</p>
 					</header>
 					<a href="#main" class="button big scrolly">Learn More</a>
 				</div>
@@ -58,8 +58,8 @@
 									</div>
 									<div class="col col2">
 										<h3>Book or text; yes you can read it</h3>
-										<p>AIrvi uses computer vision enhanced with Deep learning to help the blind read through character recognition.</p>
-										<p>We enable the blind to read like normal can and extract the world's best source of knowledge world can offer. Ranging from business card to newspaper reading and book; AIrvi is right ready to help the blind take a journey through the world</p>
+										<p>Blaiva uses computer vision enhanced with Deep learning to help the blind read through character recognition.</p>
+										<p>We enable the blind to read like normal can and extract the world's best source of knowledge world can offer. Ranging from business card to newspaper reading and book; Blaiva is right ready to help the blind take a journey through the world</p>
 										<a href="#" class="button">Learn More</a>
 									</div>
 								</div>
@@ -73,7 +73,7 @@
 								<div class="col col2">
 									<h3>Navigation assistance</h3>
 
-									<p>AIrvi helps the blind to move places confidently, Blind get guidance on how to move to reach the destination without a problem along the way</p>
+									<p>Blaiva helps the blind to move places confidently, Blind get guidance on how to move to reach the destination without a problem along the way</p>
 									<p>Thanks to the camera and laser</p>
 									<a href="#" class="button">Learn More</a>
 								</div>
@@ -111,7 +111,7 @@
 								<div class="col col2">
 									<h3></h3>
 
-									<p>AIrvi helps the blind to move places confidently, Blind get guidance on how to move to reach the destination without a problem along the way</p>
+									<p>Blaiva helps the blind to move places confidently, Blind get guidance on how to move to reach the destination without a problem along the way</p>
 									<p>Thanks to the camera and laser</p>
 									<a href="#" class="button">Learn More</a>
 								</div>
@@ -163,12 +163,12 @@
 			<footer id="footer">
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="https://web.facebook.com/AIrvi-1074866389320658/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://web.facebook.com/AIrvi-1074866389320658/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://web.facebook.com/Blaiva-1074866389320658/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://web.facebook.com/Blaiva-1074866389320658/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<!-- <li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
 					</ul>
-					<p>&copy; AIrvi. All rights reserved.</p>
+					<p>&copy; Blaiva. All rights reserved.</p>
 				</div>
 			</footer>
 
