--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Blaiva</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="Blaiva.png">
+		<link rel="icon" href="blaiva.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" 	href="assets/css/main.css" />
 	</head>
